fixed spacing issue on login page

--- a/ProblemScout-CPS406Sprint3/src/css/login.module.css
+++ b/ProblemScout-CPS406Sprint3/src/css/login.module.css
@@ -69,7 +69,3 @@
     margin:0 auto;
     border:1px solid #E2E8F0;
 }
-
-.passwordContainer {
-    margin:0;
-}
